<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DCDFE6">

    <TextView
        android:id="@+id/txt_acnt_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/account_details"
        android:textColor="#304FFE"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_margin="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/account_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@drawable/rounded_border"
        android:hint="@string/enter_account_name"
        android:padding="10dp"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_acnt_detail"
        android:autofillHints="Google" />

    <EditText
        android:id="@+id/edt_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@drawable/rounded_border"
        android:hint="@string/enter_username_email"
        android:padding="10dp"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/account_name"
        app:layout_constraintStart_toStartOf="@+id/account_name"
        app:layout_constraintTop_toBottomOf="@+id/account_name"
        android:autofillHints="username" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etPasswordLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:layout_constraintEnd_toEndOf="@+id/edt_username"
        app:layout_constraintStart_toStartOf="@+id/edt_username"
        app:layout_constraintTop_toBottomOf="@id/edt_username"
        app:hintAnimationEnabled="false"
        app:hintEnabled="false"
        app:passwordToggleEnabled="true"
      >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_border"
            android:hint="@string/enter_password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textColorHint="@color/black" />
    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/update_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:backgroundTint="#333333"
        android:text="@string/update_data"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/etPasswordLayout"
        app:layout_constraintTop_toBottomOf="@+id/etPasswordLayout" />

    <Button
        android:id="@+id/delete_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:backgroundTint="#FD0000"
        android:text="@string/delete_data"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/update_btn"
        app:layout_constraintEnd_toEndOf="@+id/etPasswordLayout"
        app:layout_constraintStart_toEndOf="@+id/update_btn"
        app:layout_constraintTop_toTopOf="@+id/update_btn" />


</androidx.constraintlayout.widget.ConstraintLayout>