<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DCDFE6">

    <EditText
        android:id="@+id/account_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:autofillHints="Google"
        android:background="@drawable/rounded_border"
        android:hint="@string/enter_account_name"
        android:inputType="text"
        android:padding="10dp"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edt_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:autofillHints="username"
        android:background="@drawable/rounded_border"
        android:hint="@string/enter_username_email"
        android:inputType="text"
        android:padding="10dp"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/account_name"
        app:layout_constraintStart_toStartOf="@+id/account_name"
        app:layout_constraintTop_toBottomOf="@+id/account_name" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etPasswordLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:layout_constraintEnd_toEndOf="@+id/edt_username"
        app:layout_constraintStart_toStartOf="@+id/edt_username"
        app:layout_constraintTop_toBottomOf="@id/edt_username"
        app:hintAnimationEnabled="false"
        app:hintEnabled="false"
        app:passwordToggleEnabled="true"
        tools:ignore="MissingConstraints">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_border"
            android:hint="@string/enter_password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textColorHint="@color/black" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/txt_gent_pswd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textSize="15sp"
        android:textColor="#333333"
        android:textStyle="bold"
        android:text="@string/generate_password"
        app:layout_constraintEnd_toEndOf="@+id/etPasswordLayout"
        app:layout_constraintStart_toStartOf="@+id/etPasswordLayout"
        app:layout_constraintTop_toBottomOf="@+id/etPasswordLayout" />

    <Button
        android:id="@+id/add_btn_ac"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:backgroundTint="#333333"
        android:text="@string/add_new_account"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/etPasswordLayout"
        app:layout_constraintStart_toStartOf="@+id/etPasswordLayout"
        app:layout_constraintTop_toBottomOf="@+id/txt_gent_pswd" />


</androidx.constraintlayout.widget.ConstraintLayout>